[package]
name = "trmnl_plugin_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs"] }
csv = "1.3"
lazy_static = "1.4"
include_dir = "0.7"
